# ctshell

./: CMakeLists.txt  Kconfig  README.md  ctshell.c  ctshell.h  ctshell_config.h  idf_component.yml
docs/en/: .readthedocs.yaml  conf.py  index.rst
docs/en/api/: api.rst
docs/en/quickstart/: porting.rst
docs/zh/: .readthedocs.yaml  conf.py  index.rst
docs/zh/api/: api.rst
docs/zh/quickstart/: porting.rst
extension/fs/: ctshell_fatfs.c
port/esp32/: ctshell_esp32.c  ctshell_esp32.h
port/posix/: ctshell_posix.c  ctshell_posix.h
